# Nikunj-Reseach-Assistant

./: .gitignore  README.md  main.py  pyproject.toml  quizzes.json
Products/: architecture.md  schema.md  spec.md
markdown/: 0007070v1.md  2503.08537v2.md  trial.md
research_assistant/cli/: main.py
research_assistant/core/: agent.py
research_assistant/llm/: gemini.py
research_assistant/mcp/: arxiv_server.py  markdown_reader.py  mindmap.py  pdf_parser.py  quiz_server.py  server.py
research_assistant/research_agent/: agent.py
tests/: test_markdown_reader.py  test_markdown_reader_coverage.py
tests/cli/: test_main.py  test_main_coverage.py  test_main_error_handling.py
tests/mcp/: test_arxiv_server.py  test_arxiv_server_coverage.py  test_mindmap.py  test_mindmap_coverage.py  test_pdf_parser.py  test_pdf_parser_coverage.py  test_quiz_server.py  test_quiz_server_coverage.py
tests/research_agent/: test_agent.py
